[project]
name = "ai-transition-mixer"
version = "0.2.0"
description = "AI Transition Mixer — split side-by-side Resolume decks and crossfade through AI"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
]

[project.entry-points."scope"]
ai_transition_mixer = "ai_transition_mixer_vjtools.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_transition_mixer_vjtools"]
