[project]
name = "ai-transition-mixer"
version = "0.3.0"
description = "AI Transition Mixer — dual-input crossfader graph node for Scope with VACE output"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
]

[project.entry-points."scope"]
ai_transition_mixer = "ai_transition_mixer_vjtools.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_transition_mixer_vjtools"]
